--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
+  },
   "dependencies": {
+    "@clerk/nextjs": "^6.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
